html routes working

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -13,7 +13,7 @@
 		<h3 class="text-center">Your true love is meowt there!</h3>
 		<hr>
 		<div class="text-center">
-		<a href="./quiz.html"><button class="btn btn-outline-primary">take the quiz!</button></a>
+		<a href="/quiz"><button class="btn btn-outline-primary">take the quiz!</button></a>
 		</div>
 	</div>
 	
